--- a/themes/zeno-themes.yaml
+++ b/themes/zeno-themes.yaml
@@ -1650,8 +1650,10 @@ Zeno Light Green:
   graph-color: var(--primary-color)
   primary-background-color: "#f2f2f2"
   secondary-background-color: var(--primary-background-color)
-  divider-color: "transparent" #divider-color: "rgba(55, 55, 61, 0)" #divider-color: "#ababab"
+  divider-color: "#ababab"
   disabled-color: "#888888" #disabled-color: "#ababab"
+  border-color: "transparent"
+  ha-card-border-color: "transparent"
   # Text colors
   primary-text-color: "#4d4d4d" #primary-text-color: "#7f7f7f"
   secondary-text-color: var(--disabled-color)
