--- a/themes/zeno-themes.yaml
+++ b/themes/zeno-themes.yaml
@@ -51,8 +51,9 @@ Zeno Dark Rose:
   secondary-background-color: var(--primary-background-color)
   divider-color: "#373737" #divider-color: "rgba(55, 55, 61, 0)" #divider-color: "#37373D"
   disabled-color: "#666666"
-  border-color: "transparent"
-  ha-card-border-color: "transparent" #Cantonades de les targetes
+  #border-color: "transparent"
+  ha-card-border-color: none #Cantonades de les targetes
+  ha-card-border-width: 0px
   # Text colors
   primary-text-color: "#e5e5e5"
   secondary-text-color: var(--disabled-color)
@@ -172,7 +173,8 @@ Zeno Dark Purple:
   divider-color: "#373737" #divider-color: "rgba(55, 55, 61, 0)" #divider-color: "#37373D"
   disabled-color: "#666666"
   border-color: "transparent"
-  ha-card-border-color: "transparent" #Cantonades de les targetes
+  ha-card-border-color: none #Cantonades de les targetes
+  ha-card-border-width: 0px
   # Text colors
   primary-text-color: "#e5e5e5"
   secondary-text-color: var(--disabled-color)
